:sparkles: feat: display message and inbox layout in chat-box

--- a/frontend/src/components/ChatBox/Inbox/inbox.css
+++ b/frontend/src/components/ChatBox/Inbox/inbox.css
@@ -20,6 +20,10 @@
   border-radius: 5px;
 }
 
+.active-recipient {
+  background-color: #eee;
+}
+
 .recipient-list:hover {
   background-color: #eee;
 }
