--- a/frontend/src/components/ChatBox/chatbox.css
+++ b/frontend/src/components/ChatBox/chatbox.css
@@ -5,3 +5,11 @@
 .inbox {
   border-right: 1px solid #000;
 }
+
+.empty-chat-div {
+  display: flex;
+  height: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
