--- a/frontend/src/components/ChatBox/Messages/Message/message.css
+++ b/frontend/src/components/ChatBox/Messages/Message/message.css
@@ -26,7 +26,7 @@
 .text {
   margin: 10px 15px;
   padding: 10px 15px;
-  border: 1px solid #aaaa;
+  /* border: 1px solid #aaaa; */
   border-radius: 5px;
   min-height: 40px;
   width: 100%;
