--- a/frontend/src/components/Profile/profile.css
+++ b/frontend/src/components/Profile/profile.css
@@ -42,6 +42,37 @@
   border-radius: 0.5rem;
   border: 1px solid #eee;
   box-shadow: 10px 25px 20px -21px rgba(0, 0, 0, 0.2);
+  font-size: 1.2em;
+}
+
+.action-btn .col-6 {
+  padding: 0px;
+}
+
+.action-btn .btn {
+  padding: 0.3rem 1.5rem;
+  background-color: #c90bce;
+  color: #fff;
+  border-radius: 0.5rem;
+}
+
+.profile-photo {
+  width: 50%;
+  text-align: center;
+  margin: auto;
+}
+
+.personal-info-wrapper {
+  width: 70%;
+}
+
+.personal-info ul {
+  list-style: none;
+  padding: 0px;
+}
+
+.personal-info .info-list {
+  padding: 1rem 1rem;
 }
 
 /* .service-btn,
