--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -3,7 +3,7 @@
 }
 
 .sidebar-active {
-  padding: 0rem 2rem;
+  padding: 1rem 2rem;
   width: calc(100vw - 200px);
   position: absolute;
   top: 0px;
@@ -24,6 +24,10 @@
   justify-content: center;
   display: flex;
   flex-direction: column;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 a {
