--- a/frontend/src/components/SideBar/sideBar.css
+++ b/frontend/src/components/SideBar/sideBar.css
@@ -27,6 +27,16 @@
   padding: 1rem;
 }
 
+.sidebar-wrapper .profile-detail {
+  text-align: center;
+  margin: 1rem 0.5rem;
+}
+
+.sidebar-wrapper .profile-detail .image {
+  width: 50%;
+  margin: auto;
+}
+
 .sidebar-wrapper ul {
   list-style: none;
   padding: 0px;
@@ -48,11 +58,28 @@
 }
 
 .sidebar-wrapper .sidebar-list .list {
-  margin: 1rem 0rem;
-  padding: 1rem 0.5rem;
+  margin: 1.5rem 0rem;
   cursor: pointer;
+}
+
+.sidebar-wrapper .sidebar-list .list a {
+  cursor: pointer;
+  padding: 0.5rem 0.2rem;
 }
 
 .sidebar-wrapper .sidebar-list .icon {
   padding: 0rem 1rem;
+}
+
+.setting-option .sidebar-list .list {
+  padding: 0.2rem 0.2rem;
+  margin: 0.5rem 0rem;
+}
+
+.sidebar-wrapper .setting-option .content {
+  font-size: 0.7em !important;
+}
+
+.rotate-90 {
+  transform: rotate(90deg);
 }
