--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -67,6 +67,11 @@ body {
   margin: 0px;
 }
 
+.form-label {
+  font-weight: 500;
+  font-style: italic;
+}
+
 .form-control {
   border: none;
   outline: none;
@@ -87,6 +92,10 @@ body {
   padding: 0.4rem 2rem;
 }
 
+.form-div .btn:focus {
+  box-shadow: none;
+}
+
 .form-div .col-12 {
   padding: 0px;
 }
@@ -97,4 +106,14 @@ body {
 
 .form-div .col-12:nth-child(2) {
   padding-left: 10px;
+}
+
+.main-page-card {
+  width: 100%;
+  padding: 1rem;
+  margin-top: 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid #eee;
+  box-shadow: 10px 25px 20px -21px rgba(0, 0, 0, 0.2);
+  font-size: 1.2em;
 }
