:sparkles: :bug: feat: add new feature of storing user detail in main state; fix: made the code more modular, and removed unnecessary requests made to server

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -55,6 +55,12 @@ body {
   position: relative;
 }
 
+.no-internet-error {
+  text-align: center;
+  width: 50%;
+  margin: auto;
+}
+
 .fa-colored-icon {
   color: #c90bce;
 }
