--- a/frontend/src/components/Profile/profile.css
+++ b/frontend/src/components/Profile/profile.css
@@ -2,6 +2,11 @@
   width: 100%;
 }
 
+.not-found-error {
+  width: 50%;
+  margin: auto;
+}
+
 .search-bar-wrapper {
   width: 60%;
   margin: auto;
