--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,3 +1,7 @@
+body {
+  position: relative;
+}
+
 .main-wrapper {
   display: flex;
 }
@@ -45,14 +49,17 @@ a:hover {
 button:focus {
   outline: none;
 }
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
 
 .btn {
   font-size: 1.2em;
   box-shadow: none;
-}
-
-body {
-  position: relative;
 }
 
 .main-wrapper-error {
