--- a/frontend/src/components/ChangePassword/changePassword.css
+++ b/frontend/src/components/ChangePassword/changePassword.css
@@ -1,3 +1,9 @@
 .change-password-wrapper .form-div {
   width: 40%;
 }
+
+@media only screen and (max-width: 768px) {
+  .change-password-wrapper .form-div {
+    width: 100%;
+  }
+}
