--- a/frontend/src/components/Friends/friends.css
+++ b/frontend/src/components/Friends/friends.css
@@ -1,6 +1,6 @@
 .filter-tag {
   padding: 0.1rem 0.3rem;
-  margin: 0.1rem 0.5rem;
+  margin: 1rem 0.5rem;
   cursor: pointer;
 }
 
@@ -10,17 +10,24 @@
 }
 
 .friend-wrapper {
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: row; */
+  justify-content: center;
   align-items: center;
-  margin: 0.1rem 0.5rem;
+  margin: 1rem 0.5rem;
   border-radius: 0.5rem;
-  border: 1px solid transparent;
-}
-
-.friend-wrapper:hover {
   border: 1px solid #eee;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+}
+
+.img {
+  width: 100px;
+  margin: auto;
+}
+
+.name {
+  word-break: break-all;
+  padding: 1rem;
 }
 
 .friend-wrapper:hover > .option svg {
@@ -47,4 +54,19 @@
 .friend-wrapper > div {
   text-align: center;
   margin: 0rem 0.3rem;
+}
+
+@media only screen and (max-width: 500px) {
+  .img {
+    width: 80px;
+  }
+  .name {
+    padding: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .img {
+    display: none;
+  }
 }
