--- a/frontend/src/components/Loading/loading.css
+++ b/frontend/src/components/Loading/loading.css
@@ -9,10 +9,10 @@
   width: 64px;
   height: 64px;
   margin-bottom: -40px;
-  margin-left: 15px;
+  margin-left: 10px;
 }
 .lds-dual-ring:after {
-  content: " ";
+  content: ' ';
   display: block;
   width: 40px;
   height: 40px;
