:bug: fix css issue

--- a/frontend/src/components/SideBar/sideBar.css
+++ b/frontend/src/components/SideBar/sideBar.css
@@ -50,6 +50,8 @@
 .sidebar-wrapper .sidebar-nav .nav-item .link {
   display: block;
   cursor: pointer;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar-wrapper .sidebar-nav .icon {
