:sparkles: :truck: :bug: feat: implement logout on expired token, fix some issue, and move make screen component to separate folder

--- a/frontend/src/components/SideBar/sideBar.css
+++ b/frontend/src/components/SideBar/sideBar.css
@@ -91,7 +91,7 @@
   .open-sidebar {
     position: absolute;
     top: 0px;
-    width: 70% !important;
+    width: 200px !important;
   }
   .aside {
     width: 60px;
